welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = 
{
	if(n>90)
	{
		return true
	}
}